Fixed widget error overflow, added radius to react-grid-placeholder

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,7 @@ body {
 
 .react-grid-item.react-grid-placeholder {
   z-index: -1;
+  border-radius: 4px;
   @apply bg-violet-600;
 }
 
